--- a/template/button_solved.html
+++ b/template/button_solved.html
@@ -1,3 +1,3 @@
-<a role="button" class="btn openmodal jnlSolvedBtn" data-toggle="modal" data-target="#topicSolvedModal" data-berichtid="0" rel="nofollow" href="#">
+<a role="button" class="btn openmodal jnlSolvedBtn" data-toggle="modal" data-target="#topicSolvedModal" data-message-id="0" rel="nofollow" href="#">
     <i class="fa fa-check"></i><span class="PLG_KUNENA_JNLSOLVED_BUTTON_SOLVED_TEXT"></span>
 </a>
