--- a/css/style_solved.css
+++ b/css/style_solved.css
@@ -5,11 +5,11 @@
  * Developer: JulianK92 (http://www.julian.wtf/)
 */
 
-.jnlSolvedSolutionPost div.row-fluid {
+.jnlSolvedSolutionPost div.row-fluid .vertical-message {
 	background-color: #f2fae3 ;
 }
 
-p.solutionPost {
+p.oplossing {
 	font-weight: bold;
 	color: #1E824C;
 	margin: 14px;
