--- a/template/button_reopen.html
+++ b/template/button_reopen.html
@@ -1,3 +1,9 @@
-<a role="button" class="btn openmodal jnlReopenBtn" data-toggle="modal" data-target="#topicReopenModal" rel="nofollow" href="#">
-    <i class="fa fa-unlock"></i><span class="PLG_KUNENA_JNLSOLVED_BUTTON_REOPEN_TEXT"></span>
-</a>
+<div class="btn-toolbar btn-marging kmessagepadding mt-2">
+    <ul class="kmod-actions">
+        <li>
+            <a role="button" class="kbtn kbtn-small openmodal jnlReopenBtn" data-bs-toggle="modal" data-bs-target="#topicReopenModal" rel="nofollow" href="#">
+                <i class="fa fa-unlock"></i><span class="">Heropen</span>
+            </a>
+        </li>
+    </ul>
+</div>
