--- a/template/button_solved.html
+++ b/template/button_solved.html
@@ -1,3 +1,9 @@
-<a role="button" class="btn openmodal jnlSolvedBtn" data-toggle="modal" data-target="#topicSolvedModal" data-message-id="0" rel="nofollow" href="#">
-    <i class="fa fa-check"></i><span class="PLG_KUNENA_JNLSOLVED_BUTTON_SOLVED_TEXT"></span>
-</a>
+<div class="btn-toolbar btn-marging kmessagepadding mt-2">
+    <ul class="kmod-actions">
+        <li>
+            <a role="button" class="kbtn kbtn-small openmodal jnlSolvedBtn" data-bs-toggle="modal" data-bs-target="#topicSolvedModal" data-message-id="0" rel="nofollow" href="#">
+                <i class="fa fa-check"></i><span class="">Oplossing</span>
+            </a>
+        </li>
+    </ul>
+</div>
